Finished all the backend and started on front end

--- a/ProjectWebsite/wwwroot/index.html
+++ b/ProjectWebsite/wwwroot/index.html
@@ -1,10 +1,30 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PC Build Helper</title>
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
+    <header>
+        <h1>Welcome to PC Build Helper</h1>
+        <p>Your one-stop solution for building the perfect PC</p>
+    </header>
+
+    <main>
+        <p>Please answer the questions to start your build</p>
+        <p>How much is your budget?</p>
+        <input type="text" id="answer1" name="answer1" placeholder="How much is your budget?">
+
+        <p>What are you going to be using it on?</p>
+        <input type="text" id="answer2" name="answer2" placeholder="What are you going to be using it on?">
+        <button id="submitButton">Submit</button>
+    </main>
+
+
+
+    <script src="main.js"></script>
 
 </body>
 </html>
