Added bootstrap and finished javascript

--- a/ProjectWebsite/wwwroot/index.html
+++ b/ProjectWebsite/wwwroot/index.html
@@ -10,17 +10,40 @@
     <header>
         <h1>Welcome to PC Build Helper</h1>
         <p>Your one-stop solution for building the perfect PC</p>
+
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="BuildPC.html">Build Your PC</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <p>Please answer the questions to start your build</p>
-        <p>How much is your budget?</p>
-        <input type="text" id="answer1" name="answer1" placeholder="How much is your budget?">
 
-        <p>What are you going to be using it on?</p>
-        <input type="text" id="answer2" name="answer2" placeholder="What are you going to be using it on?">
-        <button id="submitButton">Submit</button>
+        <div class="section1">
+            <h2>Computer Services</h2>
+            <section>
+                <img class="ServiceImg" src="img/unique-computer-service-logo-vector-graphic_405828-769.jpg" alt="ServiceImg">
+                <p>
+                    At our core, we provide comprehensive computer services tailored to your needs. From repairs and upgrades to custom PC builds, our team ensures your system runs smoothly and efficiently. Whether you're a gamer, a professional, or someone who loves technology, we’ve got you covered with our expertise and commitment to excellence.
+                </p>
+            </section>
+        </div>
+
+
+        <div class="section2">
+            <h2>Parts List</h2>
+            <section>
+                <img class="PartsImg" src="img/computer-chips-electronic-circuit-icons-600nw-446730163.jpg" alt="PartsImg">
+                <p>
+                    Explore our extensive parts list featuring top-quality components for every build. From powerful CPUs and GPUs to reliable storage solutions and cooling systems, we have everything you need to create your perfect PC. Browse through our selection and find the best parts to fit your budget and performance requirements.
+                </p>
+            </section>
+        </div>
+
     </main>
+    
 
 
 
