--- a/ProjectWebsite/wwwroot/index.html
+++ b/ProjectWebsite/wwwroot/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PC Build Helper</title>
+    <link rel="stylesheet" href="lib/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/main.css">
 
 </head>
